# isomod-GUI

./: CMakeLists.txt  README.md
.github/workflows/: WindowsBuild.yml
guisrc/: CMakeLists.txt  console.cpp  console.h  console.ui  log.cpp  log.h  main.cpp  widgetstuff.cpp  widgetstuff.h  window.cpp  window.h  window.ui
isomodsrc/: CMakeLists.txt  isomod-win.cpp  isomod-winx64.cpp  isomod.cpp
